infra/network/vpc.tf
resource "aws_vpc" "default" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  tags = {
    Name = "${var.namespace}-${var.environment}-vpc"
  }
}
